--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/clsid2/FFmpeg.git
 [submodule "libbluray"]
 	path = libbluray
-	url = git://git.1f0.de/libbluray.git
+	url = https://github.com/Goodwu/libbluray.git
 [submodule "qsdecoder"]
 	path = qsdecoder
-	url = git://git.1f0.de/qsdecoder.git
+	url = https://github.com/Goodwu/qsdecoder.git
